# RNA-MetaWiz4FAIR

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  fly.toml  main.py  pyproject.toml  requirements.txt
app/: chain.py
app/retrievers/: create_taxonomy_documents.py  ontology_retriever.py
app/utils/: parse_taxonomy_dmp.py
chain/: agent.py
jsonschema/: minseqe_schema.json
schemas/: minseqe.py
scripts/: model_jsonschema.py  parse_dmp.py
ui/: app.py
