[project]
name = "msw4fair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.23",
    "pydantic>=2.11.5",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
]
